force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/agf__QA_Test_Execution__c.object-meta.xml
<CustomObject>
    <description>QAForce2 Test Execution Object
Execution of a test case under a particular scenario, i.e., targeted release, build number</description>
    <label>Test Execution</label>
    <nameField>
        <displayFormat>{MM}{DD}{YY} - {0}</displayFormat>
        <label>Test Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>