force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__Assignee__c.field-meta.xml
<CustomField>
    <fullName>agf__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00ND0000001rflFMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>