force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Bugs__c</fullName>
    <description>Comma separated list of bugs associated to this test execution</description>
    <inlineHelpText>Comma separated list of bugs associated to this test execution</inlineHelpText>
    <label>Bugs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>