force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__Build_of_Last_Execution__c.field-meta.xml
<CustomField>
    <fullName>agf__Build_of_Last_Execution__c</fullName>
    <label>Build # of Last Execution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>