force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Comments__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>