force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__Date_of_Last_Execution__c.field-meta.xml
<CustomField>
    <fullName>agf__Date_of_Last_Execution__c</fullName>
    <description>Populate this field when you complete execution for this test case.</description>
    <label>Date of Last Execution</label>
    <type>DateTime</type>
</CustomField>