force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__Number_of_Executions__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Executions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Executions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>