force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Type__c</fullName>
    <description>Specifies the execution type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Ftest</fullName>
            </value>
            <value>
                <fullName>Silktest</fullName>
            </value>
            <value>
                <fullName>Utest</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>CTI - script</fullName>
            </value>
            <value>
                <fullName>Client Automation</fullName>
            </value>
            <value>
                <fullName>Selenium</fullName>
            </value>
            <value>
                <fullName>Systest</fullName>
            </value>
            <value>
                <fullName>ProdTest - Selenium</fullName>
            </value>
            <value>
                <fullName>ProdTest - API</fullName>
            </value>
            <value>
                <fullName>ProdTest - Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>