force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/fields/agf__User_Story__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Test Executions (User Story)</relationshipLabel>
    <relationshipName>TestExecutions2</relationshipName>
    <type>Lookup</type>
</CustomField>