force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/validationRules/agf__Assignee_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Assignee_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( agf__Assignee__c )</errorConditionFormula>
    <errorDisplayField>agf__Assignee__c</errorDisplayField>
    <errorMessage>Test Execution Insert|Update Error: Assignee is mandatory to insert|update a test execution record.</errorMessage>
</ValidationRule>