force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/validationRules/agf__Correct_status_value.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Correct_status_value</fullName>
    <active>true</active>
    <description>Status has to be: Planned, In progress, Passed, Failed, or Blocked</description>
    <errorConditionFormula>NOT(OR(
   ISPICKVAL(agf__Status__c, &quot;Planned&quot;),
   ISPICKVAL(agf__Status__c, &quot;In Progress&quot;),
   ISPICKVAL(agf__Status__c, &quot;Passed&quot;),
   ISPICKVAL(agf__Status__c, &quot;Failed&quot;),
   ISPICKVAL(agf__Status__c, &quot;Blocked&quot;)))</errorConditionFormula>
    <errorDisplayField>agf__Status__c</errorDisplayField>
    <errorMessage>Status has to be: Planned, In progress, Passed, Failed, or Blocked</errorMessage>
</ValidationRule>