force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/validationRules/agf__Needed_if_Status_is_passed_or_failed.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Needed_if_Status_is_passed_or_failed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNULL(agf__Date_of_Last_Execution__c ) ,
OR ( ISPICKVAL( agf__Status__c , &quot;Passed&quot;) , ISPICKVAL( agf__Status__c , &quot;Failed&quot;) )
)</errorConditionFormula>
    <errorMessage>Value needed for Date when Executed, since Status is Passed / Failed</errorMessage>
</ValidationRule>