force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/validationRules/agf__Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
agf__Number_of_Executions__c  &lt;= 0 ,
OR ( ISPICKVAL( agf__Status__c , &quot;Passed&quot;) , ISPICKVAL( agf__Status__c , &quot;Failed&quot;) )
)</errorConditionFormula>
    <errorDisplayField>agf__Number_of_Executions__c</errorDisplayField>
    <errorMessage>Number of Executions has to be &gt;= 1 for Passed or Failed status and &gt;= 0 for others!</errorMessage>
</ValidationRule>