force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__QA_Test_Execution__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Test_Case__c</columns>
    <columns>agf__User_Story__c</columns>
    <columns>agf__Assignee__c</columns>
    <columns>agf__Status__c</columns>
    <columns>agf__Type__c</columns>
    <columns>agf__Bugs__c</columns>
    <columns>agf__Date_of_Last_Execution__c</columns>
    <columns>agf__Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>